--- a/catalog.html
+++ b/catalog.html
@@ -24,85 +24,93 @@
         </nav>
         <div class="user-block">
           <a class="basket icon-basket" href="#">Корзина</a>
-        </div>      
+        </div>
         <h1 class="main-welcome">Добро пожаловать в магазин<br> готовых макетов</h1>
       </div>
     </header>
     <main class="container clearfix">
       <div class="catalog">
-        <div class="catalog-filter">         
+        <div class="catalog-filter">
           <ul>
             <li>Сортировать:</li>
             <li><a href="#" class="active">По цене</a></li>
             <li><a href="#">По типу</a></li>
             <li><a href="#">По функционалу</a></li>
-            </ul>
-            <span class="catalog-filter-triangles">            
-            <a href="#" id="triangle-up" class="active"></a>
-            <a href="#" id="triangle-down"></a>            
-            </span>
+          </ul>
+          <span class="catalog-filter-triangles">            
+          <a href="#" id="triangle-up" class="active"></a>
+          <a href="#" id="triangle-down"></a>            
+          </span>
         </div>
         <article class="catalog-item">
           <div class="catalog-content">
-          <div class="catalog-content-desc">
-          <a href="#"><h4>Aviator</h4></a>
-          <p>Одностраничный макет<br>с авторским дизайном</p>
-          <a href="#" class="btn">8000 р</a>            
-          </div>
+            <div class="catalog-content-desc">
+              <a href="#">
+                <h4>Aviator</h4>
+              </a>
+              <p>Одностраничный макет<br>с авторским дизайном</p>
+              <a href="#" class="btn">8000 р</a>            
+            </div>
             <img src="img/items-1.jpg" width="240" height="240" alt="">
           </div>
-
         </article>
         <article class="catalog-item">
           <div class="catalog-content">
-          <div class="catalog-content-desc">
-          <a href="#"><h4>Sunset</h4></a>
-          <p>Интернет-магазин<br>с личным кабинетом</p>
-          <a href="#" class="btn">10000 р</a>            
-          </div>
+            <div class="catalog-content-desc">
+              <a href="#">
+                <h4>Sunset</h4>
+              </a>
+              <p>Интернет-магазин<br>с личным кабинетом</p>
+              <a href="#" class="btn">10000 р</a>            
+            </div>
             <img class="catalog-content-img" src="img/items-2.jpg" width="240" height="240" alt="">
           </div>
         </article>
-
         <article class="catalog-item">
           <div class="catalog-content">
-          <div class="catalog-content-desc">
-          <a href="#"><h4>Forte</h4></a>
-          <p>Отличный макет <br>для личного блога</p>
-          <a href="#" class="btn">5000 р</a>            
-          </div>
+            <div class="catalog-content-desc">
+              <a href="#">
+                <h4>Forte</h4>
+              </a>
+              <p>Отличный макет <br>для личного блога</p>
+              <a href="#" class="btn">5000 р</a>            
+            </div>
             <img src="img/items-3.jpg" width="240" height="240" alt="">
           </div>
         </article>
-
         <article class="catalog-item">
           <div class="catalog-content">
-          <div class="catalog-content-desc">
-          <a href="#"><h4>Modern organic<br>tai</h4></a>
-          <p>Сайт для ресторана<br>быстрого питания</p>
-          <a href="#" class="btn">12000 р</a>            
-          </div>        
+            <div class="catalog-content-desc">
+              <a href="#">
+                <h4>Modern organic<br>tai</h4>
+              </a>
+              <p>Сайт для ресторана<br>быстрого питания</p>
+              <a href="#" class="btn">12000 р</a>            
+            </div>
             <img src="img/items-4.jpg" width="240" height="240" alt="">
           </div>
         </article>
         <article class="catalog-item">
           <div class="catalog-content">
-          <div class="catalog-content-desc">
-          <a href="#"><h4>Avenue</h4></a>
-          <p>Макет для блога<br>о путешествиях</p>
-          <a href="#" class="btn">8000 р</a>            
-          </div>
+            <div class="catalog-content-desc">
+              <a href="#">
+                <h4>Avenue</h4>
+              </a>
+              <p>Макет для блога<br>о путешествиях</p>
+              <a href="#" class="btn">8000 р</a>            
+            </div>
             <img src="img/items-5.jpg" width="240" height="240" alt="">
           </div>
         </article>
-
         <article class="catalog-item">
           <div class="catalog-content">
-          <div class="catalog-content-desc">
-          <a href="#"><h4>Dovetail</h4></a>
-          <p>Интернет магазин <br>с галереей товаров</p>
-          <a href="#" class="btn">8000 р</a>            
-          </div>
+            <div class="catalog-content-desc">
+              <a href="#">
+                <h4>Dovetail</h4>
+              </a>
+              <p>Интернет магазин <br>с галереей товаров</p>
+              <a href="#" class="btn">8000 р</a>            
+            </div>
             <img src="img/items-6.jpg" width="240" height="240" alt="">
           </div>
         </article>
@@ -115,62 +123,62 @@
       </div>
       <div class="sidebar">
         <form action="form.php" method="get">
-        <fieldset>
-        <label class="sidebar-title">Стоимость:</label>
-    <div class="range-filter">
-        <div class="range-controls">
-          <div class="scale">
-            <div class="bar" style="margin-left: 20%; width: 30%"></div>
-          </div>
-          <div class="toggle toggle-min"></div>
-          <div class="toggle toggle-max"></div>
-        </div>
-        <div class="price-controls">
-          <label class="min-price">ОТ <input name="min-price" type="text" value="0"></label>
-          <label class="max-price">ДО <input name="max-price" type="text" value="15000"></label>
-        </div>
-      </div>
-      </fieldset>
+          <fieldset>
+            <label class="sidebar-title">Стоимость:</label>
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar" style="margin-left: 20%; width: 30%"></div>
+                </div>
+                <div class="toggle toggle-min"></div>
+                <div class="toggle toggle-max"></div>
+              </div>
+              <div class="price-controls">
+                <label class="min-price">ОТ <input name="min-price" type="text" value="0"></label>
+                <label class="max-price">ДО <input name="max-price" type="text" value="15000"></label>
+              </div>
+            </div>
+          </fieldset>
           <fieldset>
             <legend class="sidebar-title first-legend">Сетка:</legend>
-            <ul>            
-            <li><input type="radio" name="grid" value="Адаптивная" id="grid-item-1">
-            <label for="grid-item-1">Адаптивная</label></li>
-            
-            <li><input type="radio" name="grid" value="Фиксированная" id="grid-item-2">
-            <label for="grid-item-2">Фиксированная</label></li>
-            
-            <li><input type="radio" name="grid" value="Резиновая" id="grid-item-3">
-            <label for="grid-item-3">Резиновая</label></li>
-
+            <ul>
+              <li><input type="radio" name="grid" value="Адаптивная" id="grid-item-1">
+                <label for="grid-item-1">Адаптивная</label>
+              </li>
+              <li><input type="radio" name="grid" value="Фиксированная" id="grid-item-2">
+                <label for="grid-item-2">Фиксированная</label>
+              </li>
+              <li><input type="radio" name="grid" value="Резиновая" id="grid-item-3">
+                <label for="grid-item-3">Резиновая</label>
+              </li>
             </ul>
           </fieldset>
           <fieldset class="last-fieldset">
             <legend class="sidebar-title second-legend">Особенности:</legend>
             <ul>
-            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-1">
-            <label for="features-item-1">Слайдер</label></li>
-
-            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-2">          
-            <label for="features-item-2">Блок приемуществ</label></li>
-
-            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-3">           
-            <label for="features-item-3">Новости</label></li>
-
-            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-4">           
-            <label for="features-item-4">Галерея</label></li>
-
-            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-5">            
-            <label for="features-item-5">Корзина</label></li>
-            </ul>     
-
+              <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-1">
+                <label for="features-item-1">Слайдер</label>
+              </li>
+              <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-2">          
+                <label for="features-item-2">Блок приемуществ</label>
+              </li>
+              <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-3">           
+                <label for="features-item-3">Новости</label>
+              </li>
+              <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-4">           
+                <label for="features-item-4">Галерея</label>
+              </li>
+              <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-5">            
+                <label for="features-item-5">Корзина</label>
+              </li>
+            </ul>
           </fieldset>
-           <button type="submit" class="sidebar-btn">Показать</button>
-          </form>          
-      </div>      
+          <button type="submit" class="sidebar-btn">Показать</button>
+        </form>
+      </div>
     </main>
-           <footer class="main-footer clearfix">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="1345" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <footer class="main-footer clearfix">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
       <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
         <div class="contacts-adress-item"> 191186, Санкт-Петербург
@@ -196,74 +204,24 @@
           </div>
         </div>
       </div>
-    </footer>    
+    </footer>
     <div class="modal-content clearfix">
-     <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-     <form class="user-form" action="form.php" method="get">
-     <div class="modal-content-left-rows">
-     <label for="user-name">Ваше имя:</label><br>
-     <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
-     </div>
-     <div class="modal-content-right-rows">
-     <label for="user-mail">Ваш e-mail:</label><br>
-     <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
-     </div>
-     <label for="user-comment">Текст письма</label>
-    <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <form class="user-form" action="form.php" method="get">
+        <div class="modal-content-left-rows">
+          <label for="user-name">Ваше имя:</label><br>
+          <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
+        </div>
+        <div class="modal-content-right-rows">
+          <label for="user-mail">Ваш e-mail:</label><br>
+          <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
+        </div>
+        <label for="user-comment">Текст письма</label>
+        <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
      </textarea>
-         <button class="btn" type="submit">Отправить</button>
-     </form>      
+        <button class="btn" type="submit">Отправить</button>
+      </form>
     </div>
-     <script>
-      var link = document.querySelector(".contacts-adress-btn");
-
-      var popup = document.querySelector(".modal-content");
-      var close = popup.querySelector(".modal-content-close");
-
-      var form = popup.querySelector("form");
-      var login = popup.querySelector("[name=user-name]");
-      var password = popup.querySelector("[name=user-mail]");
-
-      var storage = localStorage.getItem("login");
-
-      link.addEventListener("click", function(event) {
-        event.preventDefault();
-        popup.classList.add("modal-content-show");
-
-        if (storage) {
-          login.value = storage;
-          password.focus();
-        } else {
-          login.focus();
-        }
-
-      });
-
-      close.addEventListener("click", function(event) {
-        event.preventDefault();
-        popup.classList.remove("modal-content-show");
-        popup.classList.remove("modal-error");
-      });
-
-      form.addEventListener("submit", function(event) {
-        if (!login.value || !password.value) {
-          event.preventDefault();
-          popup.classList.remove("modal-error");
-          popup.offsetWidth = popup.offsetWidth;
-          popup.classList.add("modal-error");
-        } else {
-          localStorage.setItem("login", login.value);
-        }
-      });
-
-      window.addEventListener("keydown", function(event) {
-        if (event.keyCode === 27) {
-          if (popup.classList.contains("modal-content-show")) {
-            popup.classList.remove("modal-content-show");
-            popup.classList.remove("modal-error");
-          }
-        }
-      });
-    </script>
+    <script src="js/script.js">     </script>
   </body>
 </html>
