--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         </div>
       </section>
     </header>
-    <main >    
-       
+    <main >
       <section class="features clearfix container">
         <div class="features-item">
           <div class="features-image">
@@ -79,7 +78,7 @@
           </div>
           <h2 class="features-name">Приложения</h2>
           <p class="features-desc">Покорите топ-10 приложений<br>
-            в AppStore и Google Play
+            в AppStore и GooglePlay
           </p>
           <a class="features-anchor anchor-2" href="#">Заказать</a>
         </div>
@@ -89,7 +88,7 @@
           </div>
           <h2 class="features-name">Презентации</h2>
           <p class="features-desc">Вы даже не подозреваете<br>
-            насколько вы изумительны
+            насколько вы изумительны!
           </p>
           <a class="features-anchor anchor-3" href="#">Заказать</a>
         </div>
@@ -98,7 +97,7 @@
         <div class="about-company-content container clearfix">
           <div class="about-company-content-left">
             <div class="about-container-left">
-              <div class="about-company-slogan">Мы &#8212; мальнькая, но гордая<br>
+              <div class="about-company-slogan">Мы &#8212; маленькая, но гордая<br>
                 дизайн-студия из Краснодара.
               </div>
               <p class="about-company-desc">Исповедуем принципы минимализма и чистоты. Ставим математический<br>
@@ -130,7 +129,7 @@
               </ul>
             </div>
           </div>
-        </div>        
+        </div>
       </section>
       <section class="gallery container ">
         <ul>
@@ -141,7 +140,7 @@
       </section>
     </main>
     <footer class="main-footer clearfix">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="1345" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
       <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
         <div class="contacts-adress-item"> 191186, Санкт-Петербург
@@ -162,80 +161,29 @@
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-            <div class="footer-slogan">Давайте дружить, это выгодно</div>
+            <div class="footer-slogan">Давайте дружить, это выгодно!</div>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
       </div>
-    </footer>    
+    </footer>
     <div class="modal-content clearfix">
-     <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-     <form class="user-form" action="form.php" method="get">
-     <div class="modal-content-left-rows">
-     <label for="user-name">Ваше имя:</label><br>
-     <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
-     </div>
-     <div class="modal-content-right-rows">
-     <label for="user-mail">Ваш e-mail:</label><br>
-     <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
-     </div>
-     <label for="user-comment">Текст письма</label>
-    <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <form class="user-form" action="form.php" method="get">
+        <div class="modal-content-left-rows">
+          <label for="user-name">Ваше имя:</label><br>
+          <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
+        </div>
+        <div class="modal-content-right-rows">
+          <label for="user-mail">Ваш e-mail:</label><br>
+          <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
+        </div>
+        <label for="user-comment">Текст письма</label>
+        <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
      </textarea>
-         <button class="btn" type="submit">Отправить</button>
-     </form>      
+        <button class="btn" type="submit">Отправить</button>
+      </form>
     </div>
-   <script>
-      var link = document.querySelector(".contacts-adress-btn");
-
-      var popup = document.querySelector(".modal-content");
-      var close = popup.querySelector(".modal-content-close");
-
-      var form = popup.querySelector("form");
-      var login = popup.querySelector("[name=user-name]");
-      var password = popup.querySelector("[name=user-mail]");
-
-      var storage = localStorage.getItem("login");
-
-      link.addEventListener("click", function(event) {
-        event.preventDefault();
-        popup.classList.add("modal-content-show");
-
-        if (storage) {
-          login.value = storage;
-          password.focus();
-        } else {
-          login.focus();
-        }
-
-      });
-
-      close.addEventListener("click", function(event) {
-        event.preventDefault();
-        popup.classList.remove("modal-content-show");
-        popup.classList.remove("modal-error");
-      });
-
-      form.addEventListener("submit", function(event) {
-        if (!login.value || !password.value) {
-          event.preventDefault();
-          popup.classList.remove("modal-error");
-          popup.offsetWidth = popup.offsetWidth;
-          popup.classList.add("modal-error");
-        } else {
-          localStorage.setItem("login", login.value);
-        }
-      });
-
-      window.addEventListener("keydown", function(event) {
-        if (event.keyCode === 27) {
-          if (popup.classList.contains("modal-content-show")) {
-            popup.classList.remove("modal-content-show");
-            popup.classList.remove("modal-error");
-          }
-        }
-      });
-    </script>
-     
+    <script src="js/script.js">     </script>
   </body>
 </html>
