--- a/catalog.html
+++ b/catalog.html
@@ -155,12 +155,12 @@
           </fieldset>
           <fieldset class="last-fieldset">
             <legend class="sidebar-title second-legend">Особенности:</legend>
-            <ul>
+            <ul class="second">
               <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-1">
                 <label for="features-item-1">Слайдер</label>
               </li>
               <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-2">          
-                <label for="features-item-2">Блок приемуществ</label>
+                <label for="features-item-2">Блок преимуществ</label>
               </li>
               <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-3">           
                 <label for="features-item-3">Новости</label>
