--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 дизайн-студия из Краснодара.
               </div>
               <p class="about-company-desc">Исповедуем принципы минимализма и чистоты. Ставим математический<br>
-                расчет выше креатива. Работаем не покладая рук,как роботы.
+                расчет выше креатива. Работаем не покладая рук, как роботы.
               </p>
             </div>
             <div class="aside-content-left">
@@ -172,15 +172,16 @@
       <form class="user-form" action="form.php" method="get">
         <div class="modal-content-left-rows">
           <label for="user-name">Ваше имя:</label><br>
-          <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
+          <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста">
         </div>
         <div class="modal-content-right-rows">
           <label for="user-mail">Ваш e-mail:</label><br>
-          <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
+          <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа">     
         </div>
         <label for="user-comment">Текст письма</label>
-        <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
-     </textarea>
+        <textarea name="user-comment" id="user-comment" cols="74" rows="10" placeholder="Введите ваш текст" required>       
+        </textarea>     
+
         <button class="btn" type="submit">Отправить</button>
       </form>
     </div>
