--- a/catalog.html
+++ b/catalog.html
@@ -34,8 +34,8 @@
           <ul>
             <li>Сортировать:</li>
             <li><a href="#" class="active">По цене</a></li>
-            <li><a href="#">По типу</a></li>
-            <li><a href="#">По функционалу</a></li>
+            <li><a href="#" class="type">По типу</a></li>
+            <li><a href="#" class="functional">По функционалу</a></li>
           </ul>
           <span class="catalog-filter-triangles">            
           <a href="#" id="triangle-up" class="active"></a>
