--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <h2 class="features-name">Приложения</h2>
           <p class="features-desc">Покорите топ-10 приложений<br>
-            в AppStore и GooglePlay
+            в AppStrore и Google Play
           </p>
           <a class="features-anchor anchor-2" href="#">Заказать</a>
         </div>
@@ -179,7 +179,7 @@
           <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа">     
         </div>
         <label for="user-comment">Текст письма</label>
-        <textarea name="user-comment" id="user-comment" cols="74" rows="10" placeholder="Введите ваш текст" required>       
+        <textarea name="user-comment" id="user-comment" cols="74" rows="10" placeholder="Введите ваш текст">       
         </textarea>     
 
         <button class="btn" type="submit">Отправить</button>
