--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <h2 class="features-name">Веб-сайты</h2>
           <p class="features-desc">Мир никогда не будет прежним
-            после того как увидит ваш сайт!
+            после того как увидит ваш сайт !
           </p>
           <a class="features-anchor anchor-1" href="#">Заказать</a>
         </div>
@@ -107,9 +107,9 @@
             <div class="aside-content-left">
               <h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
               <ul class="aside-menu">
-                <li class="aside-item">Веб сайтов любой сложности</li>
+                <li class="aside-item">Веб-сайтов любой сложности</li>
                 <li class="aside-item">Мобильных приложений для IOS и Android</li>
-                <li class="aside-item">Слайдшоу и видео для корпоративных презинтаций</li>
+                <li class="aside-item">Слайдшоу и видео для корпоративных презентаций</li>
               </ul>
             </div>
           </div>
