--- a/catalog.html
+++ b/catalog.html
@@ -217,8 +217,7 @@
           <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
         </div>
         <label for="user-comment">Текст письма</label>
-        <textarea name="user-comment" id="user-comment" cols="74" rows="10" placeholder="В свободной форме">    
-     </textarea>
+        <textarea name="user-comment" id="user-comment" cols="74" rows="10" placeholder="В свободной форме"></textarea>
         <button class="btn" type="submit">Отправить</button>
       </form>
     </div>
