--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <title>Нёрдс</title>
   </head>
   <body>
@@ -183,6 +183,6 @@
         <button class="btn" type="submit">Отправить</button>
       </form>
     </div>
-    <script src="js/script.js">     </script>
+    <script src="js/script.min.js">     </script>
   </body>
 </html>
