--- a/catalog.html
+++ b/catalog.html
@@ -179,9 +179,9 @@
     </main>
     <footer class="main-footer clearfix">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
-      <div class="contacts-adress">
+       <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
-        <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
+        <div class="contacts-adress-item"> 191186, Санкт-Петербург,  
           ул. Б. Конюшенная, д. 19/8
         </div>
         <div class="contacts-adress-phone">
