--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>Нёрдс</title>
   </head>
   <body>
     <header class="main-header">
       <div class="container clearfix">
         <div class="index-logo">
-          <a>
+          <a href="#">
           <img class="index-logo-img" src="img/logo.png" width="139" height="56" alt="Логотип"></a>         
         </div>
         <nav class="main-navigation">
@@ -38,21 +38,21 @@
         <div class="slides">
           <div class="slide">
             <div class="slide-text">
-              <div class="slide-title">Долго, дорого,<br>скрупулезно</div>
+              <div class="slide-title slide-1">Долго, дорого, скрупулезно</div>
               <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
               <a class="btn" href="#">Узнать больше</a>
             </div>
           </div>
           <div class="slide">
             <div class="slide-text">
-              <div class="slide-title">Любите ли вы математику,<br> как любим ее мы?</div>
+              <div class="slide-title slide-2">Любите ли вы математику, как любим ее мы?</div>
               <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br>за креатив, чтобы дать им возможность все просчитать.</p>
               <a class="btn" href="#">Узнать больше</a>
             </div>
           </div>
           <div class="slide">
             <div class="slide-text">
-              <div class="slide-title">Только наркотики,<br> только хардкор!</div>
+              <div class="slide-title slide-3">Только наркотики, только хардкор!</div>
               <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов.</p>
               <a class="btn" href="#">Узнать больше</a>
             </div>
@@ -100,7 +100,7 @@
               <div class="about-company-slogan">Мы &#8212; маленькая, но гордая<br>
                 дизайн-студия из Краснодара.
               </div>
-              <p class="about-company-desc">Исповедуем принципы минимализма и чистоты. Ставим математический<br>
+              <p class="about-company-desc">Исповедуем принципы минимализма и чистоты. Ставим математический
                 расчет выше креатива. Работаем не покладая рук, как роботы.
               </p>
             </div>
@@ -143,7 +143,7 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
       <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
-        <div class="contacts-adress-item"> 191186, Санкт-Петербург<br>
+        <div class="contacts-adress-item"> 191186, Санкт-Петербург, 
           ул. Б. Конюшенная, д. 19/8
         </div>
         <div class="contacts-adress-phone">
