--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="about-company-content container clearfix">
           <div class="about-company-content-left">
             <div class="about-container-left">
-              <div class="about-company-slogan">Мы &#8212; маленькая, но гордая<br>
+              <div class="about-company-slogan">Мы &#8212; маленькая, но гордая
                 дизайн-студия из Краснодара.
               </div>
               <p class="about-company-desc">Исповедуем принципы минимализма и чистоты. Ставим математический
@@ -171,11 +171,11 @@
       <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
       <form class="user-form" action="form.php" method="get">
         <div class="modal-content-left-rows">
-          <label for="user-name">Ваше имя:</label><br>
+          <label for="user-name">Ваше имя:</label>
           <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста">
         </div>
         <div class="modal-content-right-rows">
-          <label for="user-mail">Ваш e-mail:</label><br>
+          <label for="user-mail">Ваш e-mail:</label>
           <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа">     
         </div>
         <label for="user-comment">Текст письма</label>
